[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "*"
crossterm = "*"
tui-input = "*"
dns-lookup = "*"
#tokio = { version = "*", features = ["full"] }
#tokio-tungstenite = "*"
#url = "*"
#futures-util = "*"
#futures-channel = "*"
#futures-lite = "*"
#async-net = "*"
#tungstenite = "*"